update: Input received and output displayed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-    <button id="btn-translate">Click here</button>
+    <textarea placeholder="Enter text here" id="txtbox-input" style="width: 25rem; height: 10rem"></textarea>
+
+    <div><button id="btn-translate">Click here</button></div>
+
+
+    <div id="txtbox-output" style="width: 25rem; height: 10rem; border: 1px solid black;"></div>
 
 
 
