--- a/lib/lib.html
+++ b/lib/lib.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
 
-        <img style="width: 10rem; heigh: 10rem" src="/images/Banana.webp"/>
+        <img class="head-img" style="width: 10rem; heigh: 10rem" src="/images/Banana.webp"/>
         <h1>Banana Translator</h1>
 
     </header>
@@ -33,6 +33,8 @@
             <li>Linkedin</li>
             <li>Phone</li>
         </ul>
+
+        <a href="/">github</a>
     </footer>
 
 </body>
