--- a/lib/lib.html
+++ b/lib/lib.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/styles.css" rel="stylesheet"/>
     <title>Library</title>
 </head>
 <body>
     
+    <section class="section-header"><img class="head-img" style="width: 10rem; heigh: 10rem" src="/images/Banana.webp"/></section>
+
+
     <!-- Header -->
     <header>
 
-        <img class="head-img" style="width: 10rem; heigh: 10rem" src="/images/Banana.webp"/>
+        
         <h1>Banana Translator</h1>
 
     </header>
