update: Added button to CSS

--- a/lib/lib.html
+++ b/lib/lib.html
@@ -22,7 +22,7 @@
     <section class="section-textarea">
         <ul>
             <textarea class="textarea textarea-input">Box 1</textarea>
-            <button>Click</button>
+            <button class="btn-translate"><span>Translate</span></button>
             <textarea class="textarea textarea-output">Box 2</textarea>
         </ul>
     </section>
