--- a/lib/lib.html
+++ b/lib/lib.html
@@ -17,6 +17,9 @@
         </ul>
     </section>
 
+    <!-- Image on the button -->
+    <div class="btn-image"><img src="/images/minion.png"></div>
+
 
     <!-- Translate Section -->
     <section class="section-textarea">
@@ -25,6 +28,14 @@
             <button class="btn-translate"><span>Translate</span></button>
             <textarea class="textarea textarea-output">Box 2</textarea>
         </ul>
+    </section>
+
+    <!-- Details Section -->
+    <section class="section-about">
+        <h2>What is a Banana Translator?</h2>
+        <p>
+            Nothing much for now.
+        </p>
     </section>
     
 
