--- a/lib/lib.html
+++ b/lib/lib.html
@@ -50,11 +50,11 @@
     <footer class="footer-section">
         <div>Contact</div>
         <ul class="list-style-empty">
-            <li class="list-inline"><a class="link" href="/">Email</a></li>
+            <li class="list-inline"><a target="_blank" class="link" href="mailto: vijayv2807@gmail.com">Email</a></li>
             <span class="footer-lines">|</span>
-            <li class="list-inline"><a class="link" href="">Linkedin</a></li>
+            <li class="list-inline"><a target="_blank" class="link" href="https://www.linkedin.com/in/vijay-v-b86939208/">Linkedin</a></li>
             <span class="footer-lines">|</span>
-            <li class="list-inline"><a class="link" href="/">Phone</a></li>
+            <li class="list-inline"><a class="link" href="tel:7305748864">Phone</a></li>
         </ul>
 
         <a href="/" class="link-github"><i class="fa fa-github"></i>VijayV</a>
