update: github link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             We all would've heard about <a class="link" href="https://en.wikipedia.org/wiki/Minions_(film)" target="_blank">Minions</a>. It is an animated film produced by Illumination Entertainment. Minions are small, yellow creatures who somehow ended up in New York. They speak in a language of their own called as the minionese or more commonly as the Banana language. This translator converts everything you want into their language. Hope this entertains you.
         </p>
 
-        <a class="link link-primary" href="/">View Source Code</a>
+        <a class="link link-primary" href="https://github.com/VijayV28/FunTranslator">View Source Code</a>
     </section>
     
 
