--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
     <link rel="manifest" href="/images/site.webmanifest">
 
-    <title>Banana</title>
+    <title>Banana Translator</title>
 </head>
 <body>
     
@@ -47,7 +47,7 @@
             We all would've heard about <a class="link" href="https://en.wikipedia.org/wiki/Minions_(film)" target="_blank">Minions</a>. It is an animated film produced by Illumination Entertainment. Minions are small, yellow creatures who somehow ended up in New York. They speak in a language of their own called as the minionese or more commonly as the Banana language. This translator converts everything you want into their language. Hope this entertains you.
         </p>
 
-        <a class="link link-primary" href="https://github.com/VijayV28/FunTranslator">View Source Code</a>
+        <a class="link link-primary" target="_blank" href="https://github.com/VijayV28/FunTranslator">View Source Code</a>
     </section>
     
 
@@ -64,7 +64,7 @@
             <li class="list-inline"><a class="link" href="tel:7305748864">Phone</a></li>
         </ul>
 
-        <a href="/" class="link-github"><i class="fa fa-github"></i>VijayV</a>
+        <a href="https://github.com/VijayV28" target="_blank" class="link-github"><i class="fa fa-github"></i>VijayV</a>
     </footer>
 
 
